--- a/scripts/config/templates/nginx.conf.erb
+++ b/scripts/config/templates/nginx.conf.erb
@@ -34,8 +34,15 @@ http {
   default_type application/octet-stream;
   sendfile on;
 
-  #Must read the body in 5 seconds.
+  # Must read the body in 5 seconds.
   client_body_timeout 5;
+
+  # redirect to non-www site
+  server {
+    server_name www.aero.com;
+    return 301 $scheme://aero.com$request_uri;
+  }
+
 
   server {
     listen <%= port %> reuseport;
